atualização da tag

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--Configuração do versionamento iniciado em 27/08
+Nome:Gustavo Maiato
+Sistema Qualidade e Produtividade
+Versão 1.0
+-->
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
